# model-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml  pytest.ini
docs/: usage.md
examples/: cifar10_config.yaml  linear_regression_config.json  mlp_classification_config.json  mnist_config.json  multi_experiment_config.json  synthetic_classification_config.yaml  synthetic_regression_config.json  train_linear_regression.py
experiments/: example.json  example.yaml  multi_example.json
mlx/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  runner.py
mlx/datasets/: __init__.py  base.py  synthetic.py
mlx/history/: __init__.py  index.py
mlx/metrics/: __init__.py  writer.py
mlx/models/: __init__.py  base.py  linear.py  mlp.py
mlx/training/: __init__.py  loop.py  output_manager.py
mlx/utils/: __init__.py  paths.py  serialization.py
tests/: test_cli_runner_integration.py  test_config_datasets.py  test_datasets_base.py  test_datasets_synthetic.py  test_metrics_writer.py  test_models_base.py  test_models_linear.py  test_models_mlp.py  test_output_manager.py  test_serialization.py  test_training_integration.py  test_version_consistency.py
